--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -45,7 +45,7 @@
                 style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/public_key_description"
+                android:contentDescription="@string/public_key"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:onClick="@{ClipboardUtils::copyTextView}"
@@ -56,21 +56,51 @@
                 tools:text="wOs2eguFEohqIZxlSJ1CAT9584tc6ejj9hfGFsoBVkA=" />
 
             <TextView
+                android:id="@+id/pre_shared_key_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:labelFor="@+id/pre_shared_key_text"
+                android:text="@string/pre_shared_key"
+                android:visibility="@{item.preSharedKey.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/public_key_text" />
+
+            <TextView
+                android:id="@+id/pre_shared_key_text"
+                style="@style/DetailText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/pre_shared_key"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/pre_shared_key_enabled"
+                android:visibility="@{item.preSharedKey.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pre_shared_key_label"
+                tools:text="8VyS8W8XeMcBWfKp1GuG3/fZlnUQFkqMNbrdmZtVQIM=" />
+
+            <TextView
                 android:id="@+id/allowed_ips_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/allowed_ips_text"
                 android:text="@string/allowed_ips"
+                android:visibility="@{item.allowedIps.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/public_key_text" />
+                app:layout_constraintTop_toBottomOf="@+id/pre_shared_key_text" />
 
             <TextView
                 android:id="@+id/allowed_ips_text"
                 style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/allowed_ips"
+                android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.allowedIps}"
+                android:visibility="@{item.allowedIps.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/allowed_ips_label"
                 tools:text="0.0.0.0/5, 8.0.0.0/7, 11.0.0.0/8, 12.0.0.0/6, 16.0.0.0/4, 32.0.0.0/3" />
@@ -82,6 +112,7 @@
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/endpoint_text"
                 android:text="@string/endpoint"
+                android:visibility="@{item.endpoint.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/allowed_ips_text" />
 
@@ -90,10 +121,37 @@
                 style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/endpoint"
+                android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.endpoint}"
+                android:visibility="@{item.endpoint.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/endpoint_label"
                 tools:text="192.168.0.1:51820" />
+
+            <TextView
+                android:id="@+id/persistent_keepalive_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:labelFor="@+id/persistent_keepalive_text"
+                android:text="@string/persistent_keepalive"
+                android:visibility="@{item.persistentKeepalive.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/endpoint_text" />
+
+            <TextView
+                android:id="@+id/persistent_keepalive_text"
+                style="@style/DetailText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/persistent_keepalive"
+                android:onClick="@{ClipboardUtils::copyTextView}"
+                android:text="@{@plurals/persistent_keepalive_seconds_unit(item.persistentKeepalive.orElse(0), item.persistentKeepalive.orElse(0))}"
+                android:visibility="@{item.persistentKeepalive.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/persistent_keepalive_label"
+                tools:text="every 3 seconds" />
 
             <TextView
                 android:id="@+id/transfer_label"
@@ -105,7 +163,7 @@
                 android:text="@string/transfer"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/endpoint_text"
+                app:layout_constraintTop_toBottomOf="@+id/persistent_keepalive_text"
                 tools:visibility="visible" />
 
             <TextView
@@ -114,6 +172,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/transfer_label"
+                android:contentDescription="@string/transfer"
+                android:onClick="@{ClipboardUtils::copyTextView}"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/transfer_label"
