--- a/ui/src/main/res/layout/config_naming_dialog_fragment.xml
+++ b/ui/src/main/res/layout/config_naming_dialog_fragment.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tunnel_name_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -28,6 +28,5 @@
         </com.google.android.material.textfield.TextInputLayout>
 
     </FrameLayout>
-
 
 </layout>
